chore: Commit changes before rebase